Add first PoC of AAS generation with aspect payload